feat: Implement modern charts and UI module using Chart.js and Bootstrap 5
- Added NotikaCharts class for handling various chart types including sales, recent items, sparklines, and knob charts.
- Integrated Chart.js 4.5.0 for rendering charts with responsive design and animations.
- Created NotikaUI class to replace jQuery plugins with Bootstrap 5 components for tooltips, popovers, and modals.
- Implemented modern counter animations using Intersection Observer.
- Developed a notification system using Bootstrap 5 toasts.
- Enhanced user interactions with hover effects, click effects, and loading states.

--- a/package.json
+++ b/package.json
@@ -11,29 +11,33 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-brands-svg-icons": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@popperjs/core": "^2.11.8",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.0",
-    "swiper": "^11.2.10",
     "dayjs": "^1.11.18",
-    "tom-select": "^2.3.1",
     "flatpickr": "^4.6.13",
-    "overlayscrollbars": "^2.11.1",
-    "aos": "^2.3.4",
-    "sonner": "^2.0.7",
+    "leaflet": "^1.9.4",
     "nouislider": "^15.8.1",
-    "@popperjs/core": "^2.11.8"
+    "overlayscrollbars": "^2.11.1",
+    "sonner": "^2.0.7",
+    "swiper": "^11.2.10",
+    "tom-select": "^2.3.1"
   },
   "devDependencies": {
-    "vite": "^7.1.5",
-    "sass": "^1.92.1", 
-    "postcss": "^8.4.50",
+    "@types/node": "^24.3.1",
     "autoprefixer": "^10.4.21",
     "cssnano": "^7.0.8",
-    "rollup-plugin-copy": "^3.5.0",
     "eslint": "^9.16.0",
+    "postcss": "^8.4.50",
     "prettier": "^3.4.2",
+    "rollup-plugin-copy": "^3.5.0",
+    "sass": "^1.92.1",
     "typescript": "^5.9.2",
-    "@types/node": "^24.3.1",
+    "vite": "^7.1.5",
     "vite-plugin-eslint": "^1.8.1"
   },
   "browserslist": [
