--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,6 @@ node_modules/@fortawesome/fontawesome-free/metadata/
 # node_modules/@fortawesome/fontawesome-free/package.json
 # node_modules/@fortawesome/fontawesome-free/LICENSE.txt
 VITE_BUNDLING_SUCCESS.md
+CLAUDE.md
+VITE_PAGE_MIGRATION_PROCESS.md
+CLAUDE.md
