--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@codemirror/lang-html": "^6.4.11",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@fortawesome/fontawesome-svg-core": "^7.2.0",
     "@fortawesome/free-brands-svg-icons": "^7.2.0",
     "@fortawesome/free-solid-svg-icons": "^7.2.0",
@@ -19,6 +22,8 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.1",
+    "codemirror": "^6.0.2",
+    "cropperjs": "^1.6.2",
     "dayjs": "^1.11.19",
     "flatpickr": "^4.6.13",
     "leaflet": "^1.9.4",
